lib/tests/fixtures/compiler/evaluation/new_invalid_float_string.baseline
Error: new_invalid_float_string.pp:1:14: node 'test': string 'nope' cannot be converted to Float.
  notice Float('nope')
               ^~~~~~
  backtrace:
    in 'new' (no source)
    in '<class main>' at new_invalid_float_string.pp:1
